# alphanumeric-mining-pool-public

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
examples/: reference_vectors.rs
kernel/: alphanumeric_blake3.cu  alphanumeric_search.cu
src/: gpu.rs  lib.rs  main.rs  pow.rs  protocol.rs  update.rs
tests/: bit-exact-check.md  bit_exact_TODO.md
