[package]
name = "alphanumeric-gpu-miner"
version = "0.3.0"
edition = "2021"
license-file = "LICENSE"
description = "CUDA GPU miner for the alphanumeric mining pool (a#) share-distribution protocol. Speaks the identical wire protocol as the CPU miner; grinds nonces on the GPU via a single-BLAKE3-of-a-92-byte-header kernel adapted from the Midstate GPU miner."
# Public source repo (mirrors the configured `git remote origin`). Confirm this
# is the intended public URL before flipping `publish`.
repository = "https://github.com/dangraagu/alphanumeric-mining-pool-public"
publish = false

# ── Dependency provenance ───────────────────────────────────────────────────
# Deps are the alphanumeric CPU miner's deps VERBATIM (blake3/hex/serde/serde_json).
#   * blake3     -> host-side REFERENCE hashing: every nonce the GPU reports is
#                   re-verified on the CPU with blake3 before it is submitted, so
#                   a buggy/unvalidated kernel can never push an invalid share.
#   * serde/json -> the newline-delimited-JSON pool protocol (copied module).
# NOTE: the CPU miner is synchronous std::net::TcpStream, NOT tokio. This miner
# reuses that synchronous client loop verbatim, so there is intentionally NO
# tokio dependency (see README "Divergences from the task brief").

[lib]
name = "alphanumeric_gpu_miner"
path = "src/lib.rs"

[[bin]]
name = "alphanumeric-gpu-miner"
path = "src/main.rs"

[[example]]
name = "reference_vectors"
path = "examples/reference_vectors.rs"

[dependencies]
blake3 = "1.4"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Self-update (src/update.rs): ureq = tiny blocking HTTP client (matches the
# synchronous std::net miner; rustls default features -> https with no system
# OpenSSL on Windows); sha2 = the mandatory sha256 verification of the download.
ureq = "2"
sha2 = "0.10"
